--- a/views/carritos.handlebars
+++ b/views/carritos.handlebars
@@ -37,6 +37,7 @@
 
     <div class="card-footer text-body-secondary" style="text-align:right;">
         <button type="button" class="btn btn-danger" id="delCarrito">Eliminar Carrito</button>
+        <button type="button" class="btn btn-success" onclick="realizarCompra()">Comprar</button>
     </div>
     </div>
 </div>
