--- a/views/productos.users.handlebars
+++ b/views/productos.users.handlebars
@@ -10,6 +10,7 @@
                 <a class="nav-link" href="/profile">perfil</a>
                 <a class="nav-link" href="/carritos">Carritos</a>
                 <a class="nav-link" href="/carritosActivos">elegir Carrito</a>
+                <a class="nav-link" href="/chat">chat</a>
                 <button id="logout" class="btn btn-link" style="text-decoration: none;">logout</button>
                 
             </div>
